<resources>
    <string name="app_name">Product Inventory</string>
    <string name="fb_secreate_key">db088e7c000bbd8860c970ec83c55eae</string>
    <string name="facebook_app_id">445193410417523</string>
    <string name="fb_login_protocol_scheme">fb445193410417523</string>
    <string name="web_client_id">1070539180504-f6db8dooupp28famtsj5a7g895o2q0bs.apps.googleusercontent.com</string>
    <string name="google_maps_key">AIzaSyDVoQ4gwrPG_i7f0Emis8x2PRlCt8FDqqY</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="please_check_internet">Please check your connection and try again.</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="create_account_desc">Enter your mobile number to create an \naccount or sign in.</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="verify_your_mobile_number">OTP Verification</string>
    <string name="resend_code">Resend OTP available in %ss</string>
    <string name="resend_otp_available">Resend OTP available</string>
    <string name="one">1:00</string>
    <string name="verify">Verify</string>
    <string name="edit_profile">Profile</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="Please_enter_product_name">Please enter product name</string>
    <string name="Please_enter_product_description">Please enter product description</string>
    <string name="Please_enter_product_price">Please enter product price</string>
    <string name="Please_select_product_category">Please select product category</string>
    <string name="Please_select_product_image">Please add product images</string>
    <string name="please_select_profile_picture">Please select profile picture</string>
    <string name="please_enter_first_name">Please enter full name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_email_address">Please enter e-mail address</string>
    <string name="please_enter_valid_email_address">Please enter valid e-mail address</string>
    <string name="please_enter_valid_dealer_type">Please select dealer type</string>
    <string name="please_dealer_type">Dealer type</string>
    <string name="please_category_type">Category type</string>
    <string name="select_dealer_type">Select dealer type</string>
    <string name="please_accept_terms_and_condition">Please accept terms &amp; conditions and privacy policy</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_details">Please enter details</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_start_time">Please select start time</string>
    <string name="please_select_end_time">Please select end time</string>
    <string name="please_select_duration">Please select duration</string>
    <string name="please_select_payment_mode">Please select payment mode</string>
    <string name="user_not_registered">User not registered.</string>
    <string name="please_enter_birth_date">Please enter date of birth</string>
    <string name="please_enter_birth_time">Please enter time of birth</string>
    <string name="please_enter_birth_place">Please enter place of birth</string>
    <string name="please_select_language">Please select language</string>
    <string name="please_select_astro_type">Please select dealer type</string>
    <string name="please_enter_price_per_min">Please enter price per minute</string>
    <string name="please_enter_experience">Please enter experience</string>
    <string name="please_enter_about">Please enter about yourself</string>
    <string name="please_select_from_time">Please select from time</string>
    <string name="please_select_to_time">Please select to time</string>
    <string name="please_select_to_time_greater_than_from_time">Please select To time grater than From time</string>
    <string name="please_select_end_date_greater_than_start_date">Please select end date grater than start date</string>
    <string name="please_select_days">Please select days</string>
    <string name="selected_time_alerady_available">selected time already available in time slot, Please select another time. </string>
    <string name="permission_denied">If you reject permission,you can not use this service Please turn on permissions at
        [Setting] > [Permission]
    </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_bookings">Booking</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_price">Price</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="my_bookings">My Bookings</string>
    <string name="booking_past">Past</string>
    <string name="booking_ongoing">Ongoing</string>
    <string name="booking_upcoming">Upcoming</string>
    <string name="edit_profiles">Edit Profile</string>
    <string name="with_astro_user">with Shopper %1$s</string>
    <string name="time_user_time">%1$s to %2$s</string>
    <string name="rate_user_charge">Rate: %1$s/min</string>
    <string name="status_user_booking">Status:</string>
    <string name="completed">Completed</string>
    <string name="approved">Approved</string>
    <string name="waiting">Waiting</string>
    <string name="deleted">Cancelled</string>
    <string name="view">View</string>
    <string name="calendar">Calendar</string>
    <string name="your_appointment_with_user">Your Appointment with %1$s</string>
    <string name="your_appointment_book">Your Appointment is Booked</string>
    <string name="example_3_input_dialog_title">Enter event title</string>
    <string name="example_3_empty_input_text">Text is empty</string>
    <string name="example_3_dialog_delete_confirmation">Delete this event?</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="select_astrologers">Select Dealer</string>
    <string name="book_now">Book Now</string>
    <string name="sort_and_filter"><![CDATA[Sort & filter]]></string>
    <string name="sort_by">Sort by</string>
    <string name="skill">Skill</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="experience_high_to_low">Experience: High to Low</string>
    <string name="experience_low_to_high">Experience: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="view_event">View Event</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="astrologer_name">Dealer Name</string>
    <string name="description">Add details…</string>
    <string name="select_date">Select Date</string>
    <string name="all_day">All Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="select_time">Select Time</string>
    <string name="no_notification">No notification</string>
    <string name="_5_minutes_before">5 minutes before</string>
    <string name="_10_minutes_before">10 minutes before</string>
    <string name="_15_minutes_before">15 minutes before</string>
    <string name="_30_minutes_before">30 minutes before</string>
    <string name="_1_hour_before">1 hour before</string>
    <string name="_1_day_before">1 day before</string>
    <string name="event_status">Event Status</string>
    <string name="select_payment_mode">Select payment mode</string>
    <string name="pay_with_wallet">Pay with wallet</string>
    <string name="pay_with_other">Pay with online</string>
    <string name="submit">Submit</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="please_select_valid_start_time">Please select valid start time</string>
    <string name="please_select_valid_end_time">Please select valid end time</string>
    <string name="please_select_valid_time">Please select valid time</string>
    <string name="astrologer_not_available">Dealer not available</string>
    <string name="astrologer_price_validation">Dealer price is not valid</string>
    <string name="astrologer_profile_not_completed">Dealer profile not completed</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="time_slot">Time Slot</string>
    <string name="repeat">Repeat</string>
    <string name="weekly">Weekly</string>
    <string name="custom">Custom</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="sunday">sunday</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="no_data_found">No Data Found</string>
    <string name="_15_min_charges_in_rs">15 min charges in rs</string>
    <string name="_30_min_charges_in_rs">30 min charges in rs</string>
    <string name="_45_min_charges_in_rs">45 min charges in rs</string>
    <string name="_60_min_charges_in_rs">60 min charges in rs</string>
    <string name="please_enter_15_min_charges">Please enter 15 min charges</string>
    <string name="please_enter_30_min_charges">Please enter 30 min charges</string>
    <string name="please_enter_45_min_charges">Please enter 45 min charges</string>
    <string name="please_enter_60_min_charges">Please enter 60 min charges</string>
    <string name="title_value">Title : %1$s</string>
    <string name="description_value">Description : %1$s</string>
    <string name="time_value">Time : %1$s</string>
    <string name="status_value">Status : %1$s</string>
    <string name="birth_Date_value">Birth date : %1$s</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="no_chat_found">No chat Found</string>
    <string name="type_message">Type message..</string>
    <string name="write_something_for_user">Write something for %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="empty_value">empty</string>
    <string name="end">End</string>
    <string name="end_chat">End Chat</string>
    <string name="enter_otp_code_sent_to">Enter OTP code sent to %s</string>
    <string name="resend_otp_on_sms">Resend OTP on SMS</string>
</resources>