<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.user.authentication.activity.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15ssp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:clickable="true"
            android:src="@drawable/dealer_back" />


        <ImageView
            android:id="@+id/imgLoginLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/user_otp_logo" />


        <TextView
            style="@style/fontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/verify_your_mobile_number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/txtOtpSentTo"
            style="@style/fontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_otp_code_sent_to"
            android:textColor="@color/text_disables"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txtSubtitle"
            style="@style/fontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_account_desc"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otpView"
            style="@style/fontRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/user_theme"
            app:height="@dimen/_35sdp"
            app:hide_otp="true"
            app:hide_otp_drawable="@drawable/circle_blue"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvResend"
            app:length="6"
            app:otp_box_background="@drawable/bg_otp_selected_user"
            app:otp_box_background_active="@drawable/bg_otp_selected_user"
            app:otp_text_size="@dimen/_13ssp"
            app:width="@dimen/_35sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            style="@style/fontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/round_user_border_bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <TextView
            android:id="@+id/txtResend"
            style="@style/fontSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/completed_status"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResendOTP"
            style="@style/fontBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/round_user_border_bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/resend_otp_on_sms"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:visibility="gone" />


    </LinearLayout>

</LinearLayout>